2011-02-24  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb_prop.c (gnuk_device_SetInterface): Fix argument to
	ClearDTOG_TX.

2011-02-10  NIIBE Yutaka  <gniibe@fsij.org>

	* Version 0.10.

	* src/configure, src/Makefile.in (BOARD_DIR): New.

	* boards/CQ_STARM/board.mk, boards/OLIMEX_STM32_H103/board.mk:
	Removed.
	* boards/STBEE/board.mk, boards/STBEE_MINI/board.mk: Removed.
	* boards/STM32_PRIMER2/board.mk, boards/STM8S_DISCOVERY/board.mk:
	Removed.

	* src/Makefile.in (OUTFILES): Don't include random_bits.

2011-02-09  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb_prop.c (gnukStringSerial): Updated.

	* tool/gnuk_put_binary.py (gnuk_token.__del__): Removed.
	Releasing the interface is done in PyUSB.

	* tool/dfuse.py (DFU_STM32.__del__): Removed.

	* src/openpgp.c (cmd_write_binary): Support random bits and card
	holder certificate as well.

	* src/openpgp-do.c (do_openpgpcard_aid): Add volatile to prevent
	compiler optimization to access AID.

2011-02-08  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/gnuk_put_binary.py: Renamed (was: gnuk_update_binary.py).
	(gnuk_token.cmd_write_binary): New.
	(main): Support writing serial number.

	* GNUK_SERIAL_NUMBER: Renamed (was: FSIJ_SERIAL_NUMBER).

	* src/config.h.in (@SERIAL_DEFINE@): Removed.

	* src/gnuk.h (FILEID_SERIAL_NO): New.

	* src/openpgp.c (INS_WRITE_BINARY, cmd_write_binary): New.

	* src/configure: Remove --with-fixed-serial support.

	* src/openpgp-do.c (do_openpgpcard_aid): Remove support of
	SERIAL_NUMBER_IN_AID.

	* src/flash.c (flash_write_binary): Support FILEID_SERIAL_NO.

2011-02-04  NIIBE Yutaka  <gniibe@fsij.org>

	* tool/gnuk_update_binary.py: Support updating random bits.

	* src/random.c (random_bits_start): Renamed.
	(random_bytes_get): Check initial erased state.

	* src/Makefile.in (random-data.o): Removed.

	* src/gnuk.ld.in (.gnuk_random): Don't have .gnuk_random any more.

	* src/flash.c (flash_erase_binary): Support FILEID_RANDOM.
	(flash_write_binary): Ditto.
